--- a/estilo.css
+++ b/estilo.css
@@ -1,7 +1,7 @@
 body,  select, div{
     background-color: #09f;
     font-size: 20pt;
-    font-family: Open Sans, Serif;
+    font-family: sans-serif;
     color: white;
 }
 
@@ -14,15 +14,38 @@ body,  select, div{
     color: white;
 }
 
-.envio{
-    background-color: rgba(0, 0, 0, 0.89);
+.select1{
+  margin-left: 19%;  
 }
+
+
+
 .num{
     padding: 10px;
     font-size: 15pt;
     border-radius: 5px;
-    width: 62%;
-    
+    width: 50%;
+    margin-left: 14%;
+}
+
+
+
+.error{
+    background-color: rgb(218, 63, 63);
+    padding: 10px;
+    margin-bottom: 10px;
+    width: 45%;
+    border-radius: 5px;
+    text-align: center;
+}
+
+.info{
+    background-color: rgb(4, 180, 48);
+    padding: 10px;
+    margin-bottom: 10px;
+    width: 45%;
+    border-radius: 5px;
+    text-align: center;
 }
 
 .result {    
@@ -30,16 +53,16 @@ body,  select, div{
     border-radius: 5px;
     padding: 5px;  
     text-align: center;
-    width: 90%;
-    margin-left: 8px;
+    width: 80%;
+    margin-left: 10%;
     font-size: 27pt;
     margin-top: 20px;
     display: none;
 }
 
 .container{
-    margin-left: 35%;        
-    width: 30%;
+    margin-left: 23%;        
+    width: 46%;
     padding: 30px;   
     background-color: rgba(0, 0, 0, 0.89);
     border-radius: 10px; 
@@ -48,6 +71,6 @@ body,  select, div{
 
 .topo{
     text-shadow: 2px 1px rgba(0, 0, 0, 0.89);
-    margin-left: 37%;
+    margin-left: 32%;
     margin-top: 10%;
 }
